--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src/**/*.js",
-    "build": "parcel build src/index.html --no-source-maps",
+    "build": "npm run clean && parcel build src/index.html --no-source-maps",
+    "build:gh-pages": "npm run clean && parcel build src/index.html --no-source-maps --public-url /ldjam-44/",
     "start": "parcel src/index.html --open",
     "clean": "rimraf -rf dist",
     "deploy": "gh-pages -d dist",
