--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "gh-pages": "^2.0.1",
-    "parcel": "^1.12.3",
+    "parcel-bundler": "^1.12.3",
+    "parcel-plugin-json-url-loader": "^0.1.2",
     "rimraf": "^2.6.3"
   },
   "dependencies": {
